# ale

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE
R/: RcppExports.R  ale.R  atari.R  package.R
src/: CMakeLists.txt  Makefile  RcppExports.cpp  ale_types.h  code.cpp
